--- a/zabbix-mysql.yml
+++ b/zabbix-mysql.yml
@@ -1,4 +1,4 @@
-- hosts: 54.64.133.2
+- hosts: 54.64.193.21
   remote_user: ec2-user
   sudo: yes
   tasks:
@@ -12,9 +12,15 @@
     mysql_user: name=zabbix password=8apDev68 priv=zabbix.*:ALL state=present
 
   - name: schema_import
-    command: mysql -uroot zabbix < /usr/share/doc/zabbix-server-mysql-*/create/schema.sql
-    command: mysql -uroot zabbix < /usr/share/doc/zabbix-server-mysql-*/create/images.sql
-    command: mysql -uroot zabbix < /usr/share/doc/zabbix-server-mysql-*/create/data.sql
+    shell: mysql -uroot zabbix < /usr/share/doc/zabbix-server-mysql-2.2.6/create/schema.sql
+    ignore_errors: True
 
+  - name: image_import
+    shell: mysql -uroot zabbix < /usr/share/doc/zabbix-server-mysql-2.2.6/create/images.sql
+    ignore_errors: True
+
+  - name: data_import
+    shell: mysql -uroot zabbix < /usr/share/doc/zabbix-server-mysql-2.2.6/create/data.sql
+    ignore_errors: True
   - name: "conf"
-    lineinfile: dest=/etc/zabbix/zabbix_server.conf regexp=^# DBPassword=  line=DBPassword=8apDev68
+    lineinfile: dest=/etc/zabbix/zabbix_server.conf regexp='^# DBPassword='  line=DBPassword=8apDev68
